--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,25 @@
----
-title: "Page Not Found"
-sitemap: false
-permalink: /404.html
+# 404 - 页面未找到 😞
+
+抱歉，您访问的页面不存在或已被删除。
+
+我们无法找到您请求的页面。请检查您输入的网址是否正确，或返回首页继续浏览。
+
 ---
 
-Sorry, but the page you were trying to view does not exist.
+## 🚧 可能的原因：
+- 您输入的 URL 错误
+- 页面已被删除或移动
+- 该页面正在维护中
+
+---
+
+### ⬅️ 返回主页
+
+如果您需要帮助，或者想返回首页，请点击以下链接：
+
+[返回首页](https://flymoon-evo.github.io/)  <!-- 请替换为你的网站主页链接 -->
+
+---
+
+### 📬 联系我们
+如果您觉得这是一个错误，或者有其他问题，请联系我们：[chenan.oc@qq.com](mailto:chenan.oc@qq.com)
